--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "react-dom": "^16.7.0-alpha.0",
     "react-progress-2": "^4.4.3",
     "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
     "thesaurus-service": "^1.2.3"
   },
   "scripts": {
     "dev": "nodemon --inspect server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "format": "prettier --write '*.js' 'pages/*.js'"
   },
   "devDependencies": {
