--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/translate": "^2.1.2",
     "evergreen-ui": "^4.5.0",
     "express": "^4.16.4",
-    "google-translate-query": "^2.4.3",
     "iso-639-1": "^2.0.3",
     "just-debounce-it": "^1.1.0",
     "lodash": "^4.17.11",
@@ -21,7 +21,7 @@
   "scripts": {
     "dev": "nodemon --inspect server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
+    "start": "GOOGLE_APPLICATION_CREDENTIALS='key.json' NODE_ENV=production node server.js",
     "format": "prettier --write '*.js' 'pages/*.js'"
   },
   "devDependencies": {
